--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <h1>Growtopia</h1>
     <p>#1 sandbox game</p>
   </div>
-  
+  <header>Information</header>
+  <div>
+      <div class="information">
+        <a href="https://www.growtopiagame.com/">
+          <h1>Play now!</h1></a>
+      </div>
+  </div>
+  <header>These noobs are skemers they skem all me soils</header>
 </body>
 </html>
