--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>#1 sandbox game</p>
   </div>
   <header>Information</header>
-  <div>
+  <div class="pictures">
       <div class="information">
         <a href="https://www.growtopiagame.com/">
           <h1>Play now!</h1></a>
