Add responsive menu

--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Growtopia</title>
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
+  <script src="main.js" defer></script>
 </head>
 <body>
-  <div class="growtopia">
-    <h1>Growtopia</h1>
-    <p>#1 sandbox game</p>
+  <div class="container">
+    <div class="info">
+      <h1>Scamma</h1>
+      <ul class="nav">
+        <li>Main</li>
+        <li>Portfolio</li>
+        <li>Information</li>
+        <li>Contact us</li>
+      </ul>
+      <svg id="menu-hamburger" viewBox="0 0 26 17" width="30px" height="100%">
+        <rect class="hamburger-menu__rect1" x="3" width="20px" height="3px"></rect>
+        <rect class="hamburger-menu__rect2" y="7" width="26px" height="3px"></rect>
+        <rect class="hamburger-menu__rect3" x="3" y="14" width="20px" height="3px"></rect>
+      </svg>
+        <!--
+     these links are moved away from the screen and
+     it will be moved back once someone clicks on the hamburger menu
+   -->
+  <div class="responsive-nav">
+    <ul>
+      <li>Main</li>
+      <li>Portfolio</li>
+      <li>Information</li>
+      <li>Contact us</li>
+    </ul>
   </div>
-  <header>Information</header>
-  <div class="pictures">
-      <div class="information">
-        <a href="https://www.growtopiagame.com/">
-          <h1>Play now!</h1></a>
-      </div>
+    </div>
+    <div class="read">
+      <h1>Skeme</h1>
+      <p>For free soils put your growid and password</p>
+      <h2>Free soils!!</h2>
+    </div>
+    </div>
   </div>
-  <header>These noobs are skemers they skem all me soils</header>
 </body>
 </html>
